[fix] letter spacing on emphasis link

--- a/assets/sass/atoms/_type.sass
+++ b/assets/sass/atoms/_type.sass
@@ -81,6 +81,7 @@ p, li
   a
     color: $cobalt
     font-weight: 700
+    letter-spacing: -0.5px
 
 .highlight
   font-family: Bluu Suuperstar
